[package]
name = "namada-autocompund-rewards"
version = "0.1.0"
edition = "2021"

[dependencies]
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v1.0.0", default-features = false, features = ["std", "async-send", "download-params"] }
futures-core = "0.3.30"
futures-util = "0.3.30"
futures = "0.3.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.4.2", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
tendermint-config = "0.38.0"
tendermint-rpc = { version = "0.38.0", features = ["http-client"] }
anyhow = "1.0.75"
argmin = "0.10.0"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }